--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	{{!-- <meta http-equiv="Content-Security-Policy" content="font-src 'self' data:; img-src 'self' data:; default-src 'self' http://121.0.0:3000/" --}}
 		<link rel="stylesheet" href="../assets/css/style.css" type="text/css" />
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<title>Eat-Da-Burger App</title>
